@@ -34,9 +34,7 @@ and then make a patch and send it via e-mail:
 
     `$ linguist src/translations/heimer_fr.ts`
 
-3) Create/update the `.qm` file
-
-    `$ lrelease src/translations/heimer_fr.ts -qm data/translations/heimer_fr.qm`
+3) Rebuild the application
 
 ### New update flow
 
@@ -46,12 +44,15 @@ This script automates the steps above (Finnish in the example):
 
 ### Adding a new language
 
-In the case of a new language, the new .qm file needs to be added under `data/translations` and
-`data/translations/translations.qrc` needs to be modified so that the new `.qm` file is included.
+In the case of a new language, the new `.qm` file needs to be added in `data/translations/translations.qrc`. Also `src/CMakeLists.txt` and `heimer.pro` need to be modified so that the new `.ts` file is included.
+
+Note that the `.qm` files are autogenerated from `.ts` files as a part of the build process.
+
+This works for both CMake and QMake.
 
 ### Testing
 
-Remember to TEST the translations. Heimer needs to be rebuilt after a `.qm` file is updated.
+Remember to TEST the translations. Heimer needs to be rebuilt after a `.ts` file has been updated.
 
 Heimer can be forced to given lang (Finnish in the example):
 
