@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/">
+    <qresource prefix="/translations">
         <file>heimer_fi.qm</file>
         <file>heimer_fr.qm</file>
         <file>heimer_it.qm</file>
