@@ -1,5 +1,7 @@
 #!/bin/bash
 
+# Updates the translation source file of the given language and opens linguist.
+
 if [[ ! "$1" ]]; then
     echo "Usage: $0 [LANG]"
     exit 1
@@ -13,12 +15,6 @@ if ! which ${LUPDATE}; then
     exit 1
 fi
 
-LRELEASE=lrelease
-if ! which ${LRELEASE}; then
-    echo "${LRELEASE} not found."
-    exit 1
-fi
-
 LINGUIST=linguist
 if ! which ${LINGUIST}; then
     echo "${LINGUIST} not found."
@@ -28,16 +24,11 @@ fi
 echo "Updating files for ${LANG}"
 
 TS_FILE=src/translations/heimer_${LANG}.ts
-QM_FILE=data/translations/heimer_${LANG}.qm
 ${LUPDATE} src/*.cpp -ts ${TS_FILE}
 
 echo "Opening ${LINGUIST}.."
 
 ${LINGUIST} ${TS_FILE}
-
-echo "Releasing.."
-
-${LRELEASE} ${TS_FILE} -qm ${QM_FILE}
 
 echo "Done."
 
