@@ -1,6 +1,16 @@
 add_subdirectory(contrib/SimpleLogger)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/contrib/SimpleLogger/src)
 
+# Translation files in src/translations (without .ts)
+set(TS heimer_fi heimer_fr heimer_it)
+set(TS_FILES)
+set(QM_FILES)
+foreach(TS_FILE ${TS})
+    list(APPEND TS_FILES ${CMAKE_SOURCE_DIR}/src/translations/${TS_FILE}.ts)
+    list(APPEND QM_FILES ${CMAKE_BINARY_DIR}/data/translations/${TS_FILE}.qm)
+endforeach()
+set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION ${CMAKE_BINARY_DIR}/data/translations)
+
 # Set sources
 set(SRC
     about_dlg.cpp
@@ -44,10 +54,14 @@ set(SRC
     writer.cpp
 )
 
+# Need to copy the QRC file to binary dir where the QM-files will be generated.
+# This is because the paths in translations.qrc are relative to itself.
+configure_file(${CMAKE_SOURCE_DIR}/data/translations/translations.qrc ${CMAKE_BINARY_DIR}/data/translations/translations.qrc COPYONLY)
+
 set(RCS
     ${CMAKE_SOURCE_DIR}/data/images/images.qrc
     ${CMAKE_SOURCE_DIR}/data/icons/icons.qrc
-    ${CMAKE_SOURCE_DIR}/data/translations/translations.qrc
+    ${CMAKE_BINARY_DIR}/data/translations/translations.qrc
 )
 
 qt5_add_resources(RC_SRC ${RCS})
